# Competitve-Coding

./: .gitignore  CMakeLists.txt  README.md  comp.h  leetcode.h  loader.py  main.cpp  template.cpp
archive/: J42015.cpp  J42024.cpp  S12022.cpp  S22021.cpp  S22022.cpp  S32024.cpp  S42024.cpp  template.cpp
comp/: 2024 Problem J1: Conveyor Belt Sushi.cpp  J12024.cpp  S12023.cpp  S12024.cpp  S22023.cpp  S22024.cpp  S32023.cpp  S32024.cpp  S42024.cpp  S52024.cpp
compJ/2015/: J12015.cpp  J22015.cpp  J32015.cpp
compJ/2021/: J12021.cpp  J22021.cpp  J32021.cpp  J42021.cpp
compJ/2022/: J12022.cpp  J22022.cpp  J32022.cpp  J52022.cpp
compJ/2023/: J12023.cpp  J22023.cpp  J52023.cpp
compJ/2024/: J12024.cpp  J22024.cpp  J32024.cpp  J42024.cpp  J52024.cpp
compS/2015/: S12015.cpp
compS/2021/: S12021.cpp  S22021.cpp  S32021.cpp
compS/2022/: S12022.cpp  S22022.cpp  S32022.cpp
compS/2023/: S22023.cpp  S32023.cpp
compS/2024/: MS12024.cpp  S12024.cpp  S22024.cpp  S32024.cpp  S52024.cpp
learning/c++/: class.cpp  functions.h  intro  intro.cpp  main.cpp  numberSystems.cpp
leetcode/: 13. Roman to Integer.cpp  13.cpp  9. Palindrome Number.cpp  9.cpp
main/: CMakeCache.txt  class.cpp  main.cpp
olyimpiads/dec14/: q1.cpp
olyimpiads/dec7/: S32015.cpp  usaco2020s1.cpp
olyimpiads/jan11/: disjoint.cpp  disjoint2.cpp  disjoint3.cpp
olyimpiads/learning/: binarysearchans.cpp  disjoint.cpp  primalgo.cpp  topologicalsort.cpp  treestuff.cpp
olyimpiads/nov16/: J42020.cpp  q1.cpp  q3.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp
olyimpiads/nov2/: J32018.cpp  S12017.cpp  S22017.cpp  q4.cpp  q5.cpp  q6.cpp  q7.cpp  q8.cpp
olyimpiads/nov23/: S12016.cpp  q4.cpp  (+2 more)
others/: p12001cco.cpp
random/: fun.cpp  r1.cpp
(+64 files in other folders)
